lookin pretty, mvp done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1 class="debug">1111</h1>
         <h1 class="debug">1111</h1>
         <h1 class="debug">1111</h1>
-        <h1 class="debug">1111</h1>
+        <h1 class="instruction">1111</h1>
         <div class="scene">
             <div class="shape cuboid-1 cub-1">
                 <div class="face ft"></div>
