Make all the memes a e s t h e t i c
bgm
progress bar

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
         <link rel="stylesheet" rel="preload" href="style.css" async>
     </head>
 
+    <h1 class="centerText instruction"></h1>
+    <h1 class="centerText Score">Click to start</h1>
+
+    <h1 class="centerText highscore"></h1>
+
+    <div class="loader"></div>
+    
     <div id="tridiv">
-        <h1 class="debug">1111</h1>
-        <h1 class="debug">1111</h1>
-        <h1 class="debug">1111</h1>
-        <h1 class="debug">1111</h1>
-        <h1 class="instruction">1111</h1>
         <div class="scene">
+            <!--shafty boye-->
             <div class="shape cuboid-1 cub-1">
                 <div class="face ft"></div>
                 <div class="face bk"></div>
@@ -18,6 +21,7 @@
                 <div class="face bm"></div>
                 <div class="face tp"></div>
             </div>
+            <!--Red-->
             <div class="shape cuboid-2 cub-2">
                 <div class="face ft"></div>
                 <div class="face bk"></div>
@@ -26,6 +30,7 @@
                 <div class="face bm"></div>
                 <div class="face tp"></div>
             </div>
+            <!--blue-->
             <div class="shape cuboid-3 cub-3">
                 <div class="face ft"></div>
                 <div class="face bk"></div>
@@ -34,6 +39,7 @@
                 <div class="face bm"></div>
                 <div class="face tp"></div>
             </div>
+            <!--logo brick-->
             <div class="shape cuboid-4 cub-4">
                 <div class="face ft"></div>
                 <div class="face bk"></div>
@@ -45,5 +51,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/progressbar.min.js"></script>
+    <script src="js/script.js"></script>    
 </html>
