--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
-    <head>
-        <link rel="stylesheet" rel="preload" href="style.css" async>
-    </head>
 
-    <h1 class="centerText instruction"></h1>
-    <h1 class="centerText Score">Click to start</h1>
+<head>
+    <link rel="stylesheet" rel="preload" href="style.css" async>
+</head>
 
-    <h1 class="centerText highscore"></h1>
+<body>
+    <div class="text">
+        <h1 class="centerText instruction"></h1>
+        <h1 class="centerText Score">Click to start</h1>
+        <h1 class="centerText highscore"></h1>
+        <div class="loader"></div>
+    </div>
 
-    <div class="loader"></div>
-    
     <div id="tridiv">
         <div class="scene">
             <!--shafty boye-->
@@ -50,7 +52,9 @@
             </div>
         </div>
     </div>
+</body>
 
-    <script src="js/progressbar.min.js"></script>
-    <script src="js/script.js"></script>    
+<script src="js/progressbar.min.js"></script>
+<script src="js/script.js"></script>
+
 </html>
