Add favicon, attempt to preload face images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <head>
     <link rel="stylesheet" rel="preload" href="style.css" async>
+    <title>Meem it!</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -52,6 +55,11 @@
             </div>
         </div>
     </div>
+
+    <img class="forceLoad" src="img/on/bop.jpg">
+    <img class="forceLoad" src="img/on/bork.jpg">
+    <img class="forceLoad" src="img/on/doot.jpg">
+    <img class="forceLoad" src="img/on/oof.jpg">
 </body>
 
 <script src="js/progressbar.min.js"></script>
